[package]
name = "celestia-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
celestia-rpc = "0.8.0"
celestia-types = "0.9.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.21"
nmt-rs = "0.2.3"
alloy-primitives = "0.8.15"
alloy-sol-types = "0.8.15"
alloy-provider = "0.4.2"
ethers-core = "2.0.14"


[[bin]]
name = "celestia_prover"
path = "src/celestia_prover.rs"
